--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# lanchain RAG示例"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import getpass\n",
     "import os\n",
     "AI_KEY = \"sk-Swi6dHHVWDY342vVaCwFLwmguz6YXfVlSXAfNxzukMtsScfP\"\n",
@@ -50,13 +59,6 @@
     "vectorstore = Chroma.from_documents(documents=splits, embedding=OpenAIEmbeddings())\n",
     "retriever = vectorstore.as_retriever()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -184,6 +186,488 @@
     "        \"configurable\": {\"session_id\": \"abc123\"}\n",
     "    },  # constructs a key \"abc123\" in `store`.\n",
     ")[\"answer\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# langchain schema规范示例，可以解析想要的输出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.output_parsers import ResponseSchema\n",
+    "from langchain.output_parsers import StructuredOutputParser\n",
+    "\n",
+    "\n",
+    "gift_response_schema = ResponseSchema(name=\"gift_response\", description=\"A gift response\")\n",
+    "delight_response_schema = ResponseSchema(name=\"delight_response\", description=\"A delight response\")\n",
+    "price_response_schema = ResponseSchema(name=\"price_response\", description=\"A price response\")\n",
+    "\n",
+    "response_schema=[gift_response_schema, delight_response_schema, price_response_schema]\n",
+    "output_parser = StructuredOutputParser.from_response_schemas(response_schema)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The output should be a markdown code snippet formatted in the following schema, including the leading and trailing \"```json\" and \"```\":\n",
+      "\n",
+      "```json\n",
+      "{\n",
+      "\t\"gift_response\": string  // A gift response\n",
+      "\t\"delight_response\": string  // A delight response\n",
+      "\t\"price_response\": string  // A price response\n",
+      "}\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "format_instructions = output_parser.get_format_instructions()\n",
+    "print(format_instructions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# langchain Buffermemory示例,可以存储和读取数据,实现对话上下文联系\n",
+    "# BufferMemory是一个简单的内存存储器，用于存储和检索数据。它是一个键值存储器，其中键是字符串，值是任何Python对象。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chains import ConversationChain\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "import getpass\n",
+    "import os\n",
+    "AI_KEY = \"sk-Swi6dHHVWDY342vVaCwFLwmguz6YXfVlSXAfNxzukMtsScfP\"\n",
+    "AI_URL = \"https://api.chatanywhere.tech/v1\"\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = AI_KEY\n",
+    "os.environ[\"OPENAI_API_BASE\"] = AI_URL\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\")\n",
+    "memory=ConversationBufferMemory()\n",
+    "\n",
+    "conversation = ConversationChain(\n",
+    "    llm=llm, verbose=True, memory=memory\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
+      "\n",
+      "Current conversation:\n",
+      "Human: What is Task Decomposition?\n",
+      "AI: Task Decomposition is a strategy used in project management and software development to break down complex tasks into smaller, more manageable sub-tasks. This approach helps teams to better understand the requirements of a project, allocate resources effectively, and track progress more efficiently. By decomposing tasks, teams can identify dependencies, prioritize work, and improve overall productivity. It is a common practice in agile methodologies such as Scrum and Kanban.\n",
+      "Human: Hi there!\n",
+      "AI:\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Hello! How can I assist you today?'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversation.predict(input=\"Hi there!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new ConversationChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
+      "\n",
+      "Current conversation:\n",
+      "\n",
+      "Human: What is Task Decomposition?\n",
+      "AI:\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Task Decomposition is a strategy used in project management and software development to break down complex tasks into smaller, more manageable sub-tasks. This approach helps teams to better understand the requirements of a project, allocate resources effectively, and track progress more efficiently. By decomposing tasks, teams can identify dependencies, prioritize work, and improve overall productivity. It is a common practice in agile methodologies such as Scrum and Kanban.'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conversation.predict(input=\"What is Task Decomposition?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: What is Task Decomposition?\n",
+      "AI: Task Decomposition is a strategy used in project management and software development to break down complex tasks into smaller, more manageable sub-tasks. This approach helps teams to better understand the requirements of a project, allocate resources effectively, and track progress more efficiently. By decomposing tasks, teams can identify dependencies, prioritize work, and improve overall productivity. It is a common practice in agile methodologies such as Scrum and Kanban.\n",
+      "Human: Hi there!\n",
+      "AI: Hello! How can I assist you today?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(memory.buffer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.memory import ConversationBufferWindowMemory\n",
+    "from langchain.memory import ConversationTokenBufferMemory\n",
+    "from langchain.memory import ConversationSummaryBufferMemory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory=ConversationBufferWindowMemory(k=3)\n",
+    "# k 表示存储的对话数量,从最近的对话开始存储"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory=ConversationTokenBufferMemory(max_token_limit=10)\n",
+    "# 这个内存存储器将存储最多10个令牌的对话，从最近的对话开始存储"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory=ConversationSummaryBufferMemory(llm=llm, max_tokens_limit=400)  \n",
+    "# 这个内存存储器将存储最多400个令牌的对话，可以一直加入新的记忆，但是会调用LLM，将存进来的记忆变成摘要，以节省空间，不超出400个令牌的限制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lanchain强大的链:LLMChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.chains import LLMChain\n",
+    "llm=ChatOpenAI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt=ChatPromptTemplate.from_template(\"Ask a question about Task Decomposition.{input}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chain=LLMChain(llm=llm, prompt=prompt, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new LLMChain chain...\u001b[0m\n",
+      "Prompt after formatting:\n",
+      "\u001b[32;1m\u001b[1;3mHuman: Ask a question about Task Decomposition.what is Task Decomposition?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Task decomposition is a process of breaking down a complex task or project into smaller, more manageable subtasks or steps in order to facilitate better planning, organization, and execution. This approach helps to identify all the necessary components of a task, assign responsibilities to team members, and ensure that the overall goal is achieved efficiently and effectively.'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chain.run(\"what is Task Decomposition?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SequentialChain,可以将多个链连接在一起，形成一个链条"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import SimpleSequentialChain\n",
+    "# simple链在处理一个输出的时候效果不错"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = ChatOpenAI()\n",
+    "first_prompt = ChatPromptTemplate.from_template(\"Ask a question about Task Decomposition.{DELIM}\")\n",
+    "chain_one=LLMChain(llm=llm, prompt=first_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "second_prompt = ChatPromptTemplate.from_template(\"Ask a question about Task Decomposition.{DELIM}\")\n",
+    "chain_two=LLMChain(llm=llm, prompt=second_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "over_all_chain=SimpleSequentialChain(chains=[chain_one, chain_two],verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new SimpleSequentialChain chain...\u001b[0m\n",
+      "\u001b[36;1m\u001b[1;3mTask decomposition is a strategy used in project management and problem-solving where a complex task or project is broken down into smaller, more manageable sub-tasks or components. This allows for better organization, delegation of responsibilities, and overall efficiency in completing the task.\u001b[0m\n",
+      "\u001b[33;1m\u001b[1;3mHow can task decomposition help improve the efficiency and effectiveness of project management?\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'How can task decomposition help improve the efficiency and effectiveness of project management?'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "over_all_chain.run(\"what is Task Decomposition?\")"
    ]
   }
  ],
