--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +99,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bound=RunnableBinding(bound=RunnableAssign(mapper={\n",
+      "  context: RunnableLambda(format_docs)\n",
+      "}), config={'run_name': 'format_inputs'})\n",
+      "| ChatPromptTemplate(input_variables=['chat_history', 'context', 'input'], input_types={'chat_history': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context'], template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, say that you don't know. Use three sentences maximum and keep the answer concise.\\n\\n{context}\")), MessagesPlaceholder(variable_name='chat_history'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], template='{input}'))])\n",
+      "| ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x00000271035ECF50>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x000002710361BD90>, model_name='gpt-3.5-turbo-0125', openai_api_key=SecretStr('**********'), openai_api_base='https://api.chatanywhere.tech/v1', openai_proxy='')\n",
+      "| StrOutputParser() config={'run_name': 'stuff_documents_chain'}\n",
+      "bound=RunnableAssign(mapper={\n",
+      "  context: RunnableBinding(bound=RunnableBranch(branches=[(RunnableLambda(lambda x: not x.get('chat_history', False)), RunnableLambda(lambda x: x['input'])\n",
+      "           | VectorStoreRetriever(tags=['Chroma', 'OpenAIEmbeddings'], vectorstore=<langchain_chroma.vectorstores.Chroma object at 0x0000027103A44F90>))], default=ChatPromptTemplate(input_variables=['chat_history', 'input'], input_types={'chat_history': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=[], template='Given a chat history and the latest user question which might reference context in the chat history, formulate a standalone question which can be understood without the chat history. Do NOT answer the question, just reformulate it if needed and otherwise return it as is.')), MessagesPlaceholder(variable_name='chat_history'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], template='{input}'))])\n",
+      "           | ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x00000271035ECF50>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x000002710361BD90>, model_name='gpt-3.5-turbo-0125', openai_api_key=SecretStr('**********'), openai_api_base='https://api.chatanywhere.tech/v1', openai_proxy='')\n",
+      "           | StrOutputParser()\n",
+      "           | VectorStoreRetriever(tags=['Chroma', 'OpenAIEmbeddings'], vectorstore=<langchain_chroma.vectorstores.Chroma object at 0x0000027103A44F90>)), config={'run_name': 'retrieve_documents'})\n",
+      "})\n",
+      "| RunnableAssign(mapper={\n",
+      "    answer: RunnableBinding(bound=RunnableBinding(bound=RunnableAssign(mapper={\n",
+      "              context: RunnableLambda(format_docs)\n",
+      "            }), config={'run_name': 'format_inputs'})\n",
+      "            | ChatPromptTemplate(input_variables=['chat_history', 'context', 'input'], input_types={'chat_history': typing.List[typing.Union[langchain_core.messages.ai.AIMessage, langchain_core.messages.human.HumanMessage, langchain_core.messages.chat.ChatMessage, langchain_core.messages.system.SystemMessage, langchain_core.messages.function.FunctionMessage, langchain_core.messages.tool.ToolMessage]]}, messages=[SystemMessagePromptTemplate(prompt=PromptTemplate(input_variables=['context'], template=\"You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, say that you don't know. Use three sentences maximum and keep the answer concise.\\n\\n{context}\")), MessagesPlaceholder(variable_name='chat_history'), HumanMessagePromptTemplate(prompt=PromptTemplate(input_variables=['input'], template='{input}'))])\n",
+      "            | ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x00000271035ECF50>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x000002710361BD90>, model_name='gpt-3.5-turbo-0125', openai_api_key=SecretStr('**********'), openai_api_base='https://api.chatanywhere.tech/v1', openai_proxy='')\n",
+      "            | StrOutputParser(), config={'run_name': 'stuff_documents_chain'})\n",
+      "  }) config={'run_name': 'retrieval_chain'}\n"
+     ]
+    }
+   ],
    "source": [
     "system_prompt = (\n",
     "    \"You are an assistant for question-answering tasks. \"\n",
@@ -130,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,23 +186,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parent run 38fe12df-3925-4293-9c6a-480db78abe1d not found for run a1f169b1-6ce8-4798-a11d-d1b310b6d7d1. Treating as a root run.\n"
+      "Parent run 24044ac8-223a-4530-8db1-3adea5c8e061 not found for run 10742951-1829-4df6-8ca0-16de83d45ab9. Treating as a root run.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'Task decomposition is the process of breaking down a complex task into smaller and simpler steps to make it more manageable for problem-solving. Techniques like Chain of Thought (CoT) and Tree of Thoughts help models decompose difficult tasks into smaller subtasks by thinking step by step or exploring multiple reasoning possibilities. Task decomposition can be done through simple prompting, task-specific instructions, or human inputs.'"
+       "'Task decomposition is a technique used to break down complex tasks into smaller and more manageable steps. It helps agents or models handle intricate tasks by dividing them into simpler subtasks. This process can be facilitated by various methods such as prompting with specific instructions, human inputs, or utilizing language models with appropriate prompts like \"Steps for XYZ.\"'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -310,17 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.chains import ConversationChain\n",
     "from langchain.memory import ConversationBufferMemory\n",
@@ -345,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -359,8 +379,7 @@
       "\u001b[32;1m\u001b[1;3mThe following is a friendly conversation between a human and an AI. The AI is talkative and provides lots of specific details from its context. If the AI does not know the answer to a question, it truthfully says it does not know.\n",
       "\n",
       "Current conversation:\n",
-      "Human: What is Task Decomposition?\n",
-      "AI: Task Decomposition is a strategy used in project management and software development to break down complex tasks into smaller, more manageable sub-tasks. This approach helps teams to better understand the requirements of a project, allocate resources effectively, and track progress more efficiently. By decomposing tasks, teams can identify dependencies, prioritize work, and improve overall productivity. It is a common practice in agile methodologies such as Scrum and Kanban.\n",
+      "\n",
       "Human: Hi there!\n",
       "AI:\u001b[0m\n",
       "\n",
@@ -373,7 +392,7 @@
        "'Hello! How can I assist you today?'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
